[gd_scene load_steps=5 format=3 uid="uid://cqhp84f1npgk6"]

[ext_resource type="Theme" uid="uid://c018gqogbyo40" path="res://scenes/ui/game_ui_theme.tres" id="1_ib0hi"]
[ext_resource type="Script" path="res://scenes/ui/day_and_night.gd" id="2_7wsaw"]
[ext_resource type="Texture2D" uid="uid://duia16xht5akh" path="res://assets/ui/basic_ui_spritesheet.png" id="2_qbd23"]

[sub_resource type="AtlasTexture" id="AtlasTexture_5hutn"]
atlas = ExtResource("2_qbd23")
region = Rect2(261, 2, 7, 12)

[node name="DayAndNight" type="Control"]
layout_mode = 3
anchors_preset = 0
theme = ExtResource("1_ib0hi")
script = ExtResource("2_7wsaw")

[node name="DayNightPanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -80.0
offset_bottom = 28.0
theme_type_variation = &"DayNightPanel"

[node name="MarginContainer" type="MarginContainer" parent="DayNightPanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="DayLabel" type="Label" parent="DayNightPanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "DAY 0"

[node name="DayNightTimePanel" type="PanelContainer" parent="."]
layout_mode = 0
offset_left = -80.0
offset_top = 29.0
offset_bottom = 57.0
theme = ExtResource("1_ib0hi")
theme_type_variation = &"DayNightPanel"

[node name="MarginContainer" type="MarginContainer" parent="DayNightTimePanel"]
layout_mode = 2
theme_override_constants/margin_left = 3
theme_override_constants/margin_top = 3
theme_override_constants/margin_right = 3
theme_override_constants/margin_bottom = 3

[node name="TimeLabel" type="Label" parent="DayNightTimePanel/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_type_variation = &"DayNightLabel"
text = "00:00"

[node name="Control" type="Control" parent="."]
anchors_preset = 0
offset_left = -80.0
offset_top = 58.0
offset_bottom = 76.0

[node name="NormalSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_right = 26.0
offset_bottom = 18.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/NormalSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_5hutn")

[node name="FastSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 27.0
offset_right = 53.0
offset_bottom = 18.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -6.0
offset_right = 7.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_5hutn")

[node name="TextureRect2" type="TextureRect" parent="Control/FastSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -5.0
offset_top = -6.0
offset_right = 2.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_5hutn")

[node name="SuperSpeedButton" type="Button" parent="Control"]
layout_mode = 0
offset_left = 54.0
offset_right = 80.0
offset_bottom = 18.0
theme_type_variation = &"DayNightButton"

[node name="TextureRect" type="TextureRect" parent="Control/SuperSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 1.0
offset_top = -6.0
offset_right = 8.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_5hutn")

[node name="TextureRect2" type="TextureRect" parent="Control/SuperSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -3.0
offset_top = -6.0
offset_right = 4.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_5hutn")

[node name="TextureRect3" type="TextureRect" parent="Control/SuperSpeedButton"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -7.0
offset_top = -6.0
offset_bottom = 6.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("AtlasTexture_5hutn")

[connection signal="pressed" from="Control/NormalSpeedButton" to="." method="_on_normal_speed_button_pressed"]
[connection signal="pressed" from="Control/FastSpeedButton" to="." method="_on_fast_speed_button_pressed"]
[connection signal="pressed" from="Control/SuperSpeedButton" to="." method="_on_super_speed_button_pressed"]
